src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/*=========================================
    additional resets and utility classes
  =========================================*/
@layer components {
  .container {
    width: 100%;
    max-width: 79.5rem;
    padding: 0 1rem;
    margin: 0 auto;
  }
}

@layer utilities {
  .no-scrollbar::-webkit-scrollbar {
    display: none;
  }

  .no-scrollbar {
    -ms-overflow-style: none;
    scrollbar-width: none;
  }

  .word-break {
    word-break: break-word;
  }

  .line-h-1 {
    line-height: 1;
  }

  @media (hover: none) {
    .not-hoverable-opacity-100 {
      @apply opacity-100;
    }
  }
}

@layer base {
  button {
    user-select: none;
  }

  address {
    font-style: normal;
  }

  /* remove arrows from number input */
  input::-webkit-outer-spin-button,
  input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  /* Firefox */
  input[type='number'] {
    appearance: textfield;
    -moz-appearance: textfield;
  }
}

:root {
  --nav-height: 6rem;
  --footer-height: 7.25rem;
}

@media not all and (min-width: 768px) {
  :root {
    --nav-height: 4.25rem;
  }
}

/*----------
    swiper
  ----------*/
.swiper-pagination-bullet {
  cursor: pointer;
}

/*---------------
    phone input
  ---------------*/
/* !important for overriding the default input rules */
.flag-dropdown,
.selected-flag.open {
  @apply rounded-l !important;
}

/*-----------
    tooltip
  -----------*/
@layer components {
  .tooltip-container:hover .tooltip:not(:hover),
  .tooltip-container:hover .tooltip-hoverable {
    @apply visible opacity-100 delay-300;
  }

  .tooltip {
    --tooltip-position: calc(100% + 0.5rem);

    @apply after:border-opacity-65 !important;
  }

  .tooltip.top,
  .tooltip.tooltip.bottom {
    @apply left-1/2 -translate-x-1/2 after:left-1/2 after:-translate-x-1/2;
  }

  .tooltip.top {
    bottom: var(--tooltip-position);

    @apply after:top-full after:border-t-zinc-600;
  }

  .tooltip.bottom {
    top: var(--tooltip-position);

    @apply after:bottom-full after:border-b-zinc-600;
  }

  .tooltip.left,
  .tooltip.right {
    @apply top-1/2 -translate-y-1/2 after:top-1/2 after:-translate-y-1/2;
  }

  .tooltip.left {
    right: var(--tooltip-position);

    @apply after:left-full after:border-l-zinc-600;
  }

  .tooltip.right {
    left: var(--tooltip-position);

    @apply after:right-full after:border-r-zinc-600;
  }
}

/*----------------
    custom input
  ----------------*/
@layer components {
  .field-container label {
    line-height: 1;
  }

  .field-container .field:focus + label,
  .field-container .field:not(:placeholder-shown) + label {
    @apply -top-2 border-b bg-white text-xs;
  }

  .field-container .field:focus + label {
    @apply text-blue-400;
  }
}

/*-----------------
    custom select
  -----------------*/
.appear {
  animation: fadeAppear 0.15s forwards;
}

.disappear {
  animation: fadeDisappear 0.15s forwards;
}

@keyframes fadeAppear {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadeDisappear {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

/*------------------------
    custom switch button
  ------------------------*/
.switch-translate-left::after {
  --tw-translate-x: calc(-100% - 0.25rem);
}

/*=========================
    icons as a background
  =========================*/
.google-icon {
  background-image: url('/icons/socials/google.svg');
}

.facebook-icon {
  background-image: url('/icons/socials/facebook.svg');
}

.apple-icon {
  background-image: url('/icons/socials/apple.svg');
}

/*==========
    navbar
  ==========*/
.navbar::after {
  content: '';

  width: calc(100% - 2rem);
  max-width: 77.5rem;

  @apply absolute -bottom-px left-1/2 h-px -translate-x-1/2 bg-black bg-opacity-10;
}

.navbar__search::before {
  content: '';

  background-image: url('/icons/search.svg');

  @apply absolute left-3 top-1/2 flex size-6 -translate-y-1/2 bg-center bg-no-repeat opacity-40;
}

.navbar__search::before {
  content: '';

  background-image: url('/icons/search.svg');

  @apply absolute left-3 top-1/2 flex size-6 -translate-y-1/2 bg-center bg-no-repeat opacity-40;
}

/*===========
    profile
  ===========*/
.profile__link {
  @apply flex w-full rounded border-b transition-colors hover:bg-sky-50 active:bg-sky-50;
}

.profile__link a {
  @apply w-full px-4 py-2;
}

.profile__link .active {
  @apply bg-sky-50;
}

.avatar__upload {
  background-image: url('/icons/upload-image.svg');
  background-size: 2rem;
}

@media (hover: hover) {
  .avatar:hover .avatar__upload {
    opacity: 0.8;
  }
}

@media (hover: none) {
  .avatar__upload {
    @apply inset-auto bottom-0 right-0 flex size-5 items-center justify-center bg-sky-400 bg-none opacity-100 outline outline-2 outline-white md:size-6 md:-translate-x-1/4 md:-translate-y-1/4;
  }

  .avatar__upload::after {
    content: '+';

    line-height: 0.675rem;

    @apply font-bold text-white;
  }
}

.avatar:has(input:focus) img {
  @apply outline outline-2 outline-offset-2 outline-black;
}

.nav-close {
  animation: closeProfileNav 0.3s forwards;
}

.nav-open {
  animation: openProfileNav 0.3s forwards;
}

@keyframes closeProfileNav {
  0% {
    opacity: 0.2;
  }
  100% {
    opacity: 0;
    display: none;
  }
}

@keyframes openProfileNav {
  0% {
    display: none;
    opacity: 0;
  }
  100% {
    opacity: 0.2;
  }
}

/*==============
    Option box
  ==============*/
.option {
  @apply hover:bg-black hover:bg-opacity-5 active:cursor-grabbing active:bg-black active:bg-opacity-10;
}

.option:has(.option__details:hover, .option__details:active) {
  background: transparent;
}

.option__button {
  @apply absolute top-1/2 -translate-y-1/2 cursor-pointer opacity-0 transition-all;
  @apply focus:opacity-100 group-hover:opacity-100;
}

.option__button-icon {
  @apply box-content size-4 p-1 text-gray-400 transition-all hover:text-gray-500 active:text-gray-800;
}

.option__details {
  bottom: calc(100% + 0.75rem);
  @apply absolute left-1/2 z-10 flex w-max min-w-60 max-w-96 -translate-x-1/2 cursor-default;
  @apply flex-col gap-2 rounded border border-gray-400 bg-white px-4 py-2 transition-opacity;

  animation: showOptionDetails 0.15s forwards;
}

.option__details::before {
  content: '';
  @apply absolute bottom-0 left-1/2 size-3 -translate-x-1/2 translate-y-1/2 rotate-45 rounded-sm;
  @apply border border-white border-b-gray-400 border-r-gray-400 bg-white;
}

@media (hover: none) {
  .option__button {
    @apply opacity-100;
  }
}

@keyframes showOptionDetails {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}


@media not all and (min-width: 640px) {
  .option-list-dropdown {
    @apply origin-top flex-col flex-nowrap overflow-hidden px-8 transition-all;
  }

  .option-list-dropdown.list-hide {
    @apply gap-y-0 py-0;
  }

  .option-list-dropdown.list-hide > * {
    height: 0;
    opacity: 0;
  }
}

